--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
 :root {
+
+  /* TODO: !!! What is this :root? */
+  /* TODO: !!! Is it OK to use styled-components in Next.js? */
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
