--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,5 +10,6 @@
 
 body {
     background-color: rgba(0, 0, 20, 1);
+    color: white;
     font-family: 'Oswald', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
