--- a/components/Services/Service.module.css
+++ b/components/Services/Service.module.css
@@ -7,7 +7,9 @@
 }
 
 .image-container {
+    /*/
     outline: 1px dotted red;
+    /**/
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
 }
@@ -18,7 +20,9 @@
 }
 
 .title {
+    /*/
     outline: 1px dotted red;
+    /**/
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
 }
