--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -1,15 +1,3 @@
 .services {
-    display: flex;
-    flex-flow: row wrap;
-}
-
-.services > * {
-    width: 33.333%;
-}
-
-
-@media only screen and (max-width: 650px) {
-    .services > * {
-        width: 100%;
-    }
+    margin-top: 20px;
 }
