--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -4,36 +4,59 @@
     display: grid;
 
     /* TODO: !!! On mobile strech cave from edge to edge */
-    grid-template-columns: 2vw 1fr 3fr 1fr 2vw;
+    grid-template-columns: 20vw 1fr 3fr 1fr 20vw;
     grid-template-rows: 0px auto 20vh minmax;
 
     align-items: stretch;
     justify-items: stretch;
 }
 
+@media only screen and (max-width: 1000px) {
+    .page {
+        grid-template-columns: 5vw 1fr 3fr 1fr 5vw;
+    }
+}
+
+.outline {
+    z-index: 10;
+    outline: 1px dotted white;
+    color: white;
+    opacity: 0.3;
+    font-size: 30px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
 .cave {
     z-index: 1;
-    /*/
+    /**/
     outline: 1px dotted red;
     /**/
 
-    grid-column: 2 / span 3;
-    grid-row: 2 / span 1;
+    grid-column: 1 / span 5;
+    grid-row: 1 / span 1;
 }
 
 .content {
     z-index: 2;
-    /*/
-    outline: 1px dotted red;
+    /**/
+    outline: 1px dotted green;
     /**/
     grid-column: 2 / span 3;
-    grid-row: 3 / span 2;
+    grid-row: 2 / span 2;
     text-align: center;
     color: white;
     text-shadow: #ff5500 0px 0px 10px;
 }
 
 .content h1 {
+    /**/
+    outline: 1px dotted purple;
+    /**/
+
     font-family: 'PassionsConflict', Helvetica Neue;
     font-size: 60px;
 
@@ -47,6 +70,10 @@
 }
 
 .content p {
+    /**/
+    outline: 1px dotted purple;
+    /**/
+
     width: calc(50% + 1vw);
     margin: auto;
 }
