--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,5 +1,5 @@
 .page {
-    width: 100%;
+    /*width: 100%;*/
 
     display: grid;
 
@@ -14,20 +14,6 @@
     .page {
         grid-template-columns: 5vw 1fr 3fr 1fr 5vw;
     }
-}
-
-.outline {
-    z-index: 10;
-    outline: 1px dotted white;
-    color: white;
-    opacity: 0.3;
-    font-size: 30px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    pointer-events: none;
 }
 
 .cave {
