--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -4,7 +4,7 @@
     display: grid;
 
     grid-template-columns: 20vw 1fr 3fr 1fr 20vw;
-    grid-template-rows: auto /* <- [🦉] Here should be vh limit instead of in .cave  */ 20vh auto;
+    grid-template-rows: auto /* <- [🦉] Here should be vh limit instead of in .cave  */ 20vh auto minmax(17vh, 75px);
 
     align-items: stretch;
     justify-items: stretch;
@@ -16,7 +16,7 @@
     }
 }
 
-.cave {
+.page header {
     z-index: 1;
     /**/
     outline: 1px dotted red;
@@ -26,7 +26,7 @@
     grid-row: 1 / span 1;
 }
 
-.content {
+.page main {
     z-index: 2;
     /**/
     outline: 1px dotted green;
@@ -38,7 +38,9 @@
     text-shadow: #ff5500 0px 0px 10px;
 }
 
-.content h1 {
+.page main h1 {
+    /* TODO: !!! h1 should be in header*/
+
     /**/
     outline: 1px dotted purple;
     /**/
@@ -55,11 +57,25 @@
     margin-inline-end: 0;
 }
 
-.content p {
+.page main p {
+    /* TODO: !!! perex should be in header*/
+
     /**/
     outline: 1px dotted purple;
     /**/
 
     width: calc(50% + 1vw);
     margin: auto;
+}
+
+.page footer {
+    z-index: 2;
+    /**/
+    outline: 1px dotted green;
+    /**/
+    grid-column: 1 / span 5;
+    grid-row: 4 / span 1;
+    text-align: center;
+    color: white;
+    text-shadow: #ff5500 0px 0px 10px;
 }
