--- a/components/MyProjects/MyProjects.module.css
+++ b/components/MyProjects/MyProjects.module.css
@@ -1,3 +1,3 @@
-.myProjects {
-    /* TODO: Remove empty css */
+.myProjects /* <- TODO: CSS class myProjects vs my-projects*/ {
+    margin-top: 30px /* <- TODO: DRY*/;
 }
