Making Acronym interactive

--- a/components/Acronym/Acronym.module.css
+++ b/components/Acronym/Acronym.module.css
@@ -1,2 +1,11 @@
 .acronym {
+    /* TODO: Use or remove empty css */
+}
+
+.initial {
+    /* TODO: Use or remove empty css */
+}
+
+.rest {
+    opacity: 0.5;
 }
