Cave main design

--- a/pages-sections/Cave/Cave.module.css
+++ b/pages-sections/Cave/Cave.module.css
@@ -1,20 +1,11 @@
 .cave {
-    max-height: 70vh /* <- [🦉] This value should be defined in grid but I can not figure out how to do it */;
+    width: 100%;
+    height: 100%;
 
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
 
-    /*
-    !!! Do it inside of the image
-    */
-    transform: translateX(3.3%); /* <- Note: This centeres man in the image of the cave */
-
     align-items: stretch;
     justify-items: stretch;
-}
-
-.cave img {
-    width: 100%;
-    height: auto;
 }
