--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -4,7 +4,7 @@
     display: grid;
 
     grid-template-columns: 20vw 1fr 3fr 1fr 20vw;
-    grid-template-rows: auto /* <- [🦉] Here should be vh limit instead of in .cave  */ 20vh auto minmax(17vh, 75px);
+    grid-template-rows: 70vh 10vh 10vh auto minmax(17vh, 75px);
 
     align-items: stretch;
     justify-items: stretch;
@@ -23,16 +23,34 @@
     /**/
 
     grid-column: 1 / span 5;
-    grid-row: 1 / span 1;
+    grid-row: 1 / span 2;
+}
+
+.headerToMainGradientBackground {
+    z-index: 2;
+
+    grid-column: 1 / span 5;
+    grid-row: 2 / span 2;
+
+    background-image: linear-gradient(to bottom, transparent, #0a1225);
+}
+
+.mainBackground {
+    z-index: 2;
+
+    grid-column: 1 / span 5;
+    grid-row: 4 / span 2;
+
+    background-color: #0a1225;
 }
 
 .page main {
-    z-index: 2;
+    z-index: 3;
     /*/
     outline: 1px dotted green;
     /**/
     grid-column: 2 / span 3;
-    grid-row: 2 / span 2;
+    grid-row: 2 / span 3;
     text-align: center;
     color: white;
     text-shadow: #ff5500 0px 0px 10px;
@@ -69,13 +87,10 @@
 }
 
 .page footer {
-    z-index: 2;
+    z-index: 3;
     /*/
     outline: 1px dotted green;
     /**/
     grid-column: 1 / span 5;
-    grid-row: 4 / span 1;
-    text-align: center;
-    color: white;
-    text-shadow: #ff5500 0px 0px 10px;
+    grid-row: 5 / span 1;
 }
