--- a/components/Items/Item.module.css
+++ b/components/Items/Item.module.css
@@ -15,7 +15,9 @@
     outline: 1px dotted red;
     /**/
 
+    z-index: 1;
     order: 1;
+
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
 }
@@ -30,7 +32,9 @@
     outline: 1px dotted red;
     /**/
 
+    z-index: 2;
     order: 2;
+
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
 
@@ -47,7 +51,9 @@
     outline: 1px dotted blue;
     /**/
 
+    z-index: 3;
     order: 3;
+
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
 
@@ -73,7 +79,9 @@
     outline: 1px dotted yellow;
     /**/
 
+    z-index: 3;
     order: 3;
+
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
 
