--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -4,7 +4,9 @@
     display: grid;
 
     grid-template-columns: 20vw 1fr 3fr 1fr 20vw;
-    grid-template-rows: 40vh 10vh 10vh auto minmax(17vh, 75px);
+    grid-template-rows: 20vh 10vh 10vh auto minmax(17vh, 75px);
+
+    /* !!! 40vh */
 
     align-items: stretch;
     justify-content: stretch;
