--- a/components/TiledBackground/TiledBackground.module.css
+++ b/components/TiledBackground/TiledBackground.module.css
@@ -11,8 +11,19 @@
     mask-repeat: no-repeat;
     /* !!! 100px should be configurabke*/
 
-    background-image: url(../../public/patterns/Pavol_Hejny_Altamira_Cave_painting_5732f60b-c6cc-462b-8b51-45403e055bd3.png);
-    background-size: 350px 350px;
-    background-repeat: repeat;
-    /* TODO: !!! ACRY all background-image should have background-color fallback */
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+}
+
+.layer {
+    /**/
+    outline: 1px dotted yellow;
+    /**/
+
+    width: 100%;
+    height: 100%;
+
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
 }
