--- a/components/Items/Item.module.css
+++ b/components/Items/Item.module.css
@@ -29,6 +29,19 @@
     height: auto;
 }
 
+.item .imageContainer div[style*='background-image'] {
+    background-size: 100%;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    transition: all 2s ease-in-out /* <- TODO: Unite transition effects ACRY */;
+}
+
+.item:hover .imageContainer div[style*='background-image'] {
+    background-size: 200%;
+}
+
 .item .overlay {
     /*/
     outline: 1px dotted red;
@@ -75,7 +88,7 @@
 
     backdrop-filter: blur(10px) /* <- TODO: Unite glass effect ACRY */;
 
-    transition: all 0.2s ease-in-out /* <- TODO: Unite transition effects ACRY */;
+    transition: all 0.3s ease-in-out /* <- TODO: Unite transition effects ACRY */;
     opacity: 0.9;
 }
 
@@ -87,6 +100,7 @@
 .item:hover .title .inner {
     background-color: rgba(0, 0, 0, 0);
     opacity: 0;
+    transform: scale(120%);
 }
 
 .item .description {
