--- a/components/Section/Section.module.css
+++ b/components/Section/Section.module.css
@@ -10,3 +10,8 @@
     color: inherit;
     text-decoration: inherit;
 }
+
+.section h2 {
+    display: inline-block;
+    /* border-top: 5px solid #ff9912; */
+}
