--- a/components/TiledBackground/TiledBackground.module.css
+++ b/components/TiledBackground/TiledBackground.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
 
-    mask-image: linear-gradient(to bottom, transparent 0%, #fff 100px, #fff 100%)
+    mask-image: linear-gradient(to bottom, transparent 0%, #fff 55px, #fff 100%)
         /* <- TODO: [🛹] Make some more interesting mask-gradient */;
     mask-size: 100% 100%;
     mask-repeat: no-repeat;
@@ -27,6 +27,8 @@
 
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
+
+    pointer-events: none;
 }
 
 /* TODO: TiledBackground and TiledBackgroundPlayground can share a css module*/
