--- a/components/Section/Section.module.css
+++ b/components/Section/Section.module.css
@@ -12,6 +12,10 @@
     margin-bottom: 50px;
 }
 
+.section > p {
+    font-size: 20px /* <- [🔠] Make one place for font-size */;
+}
+
 .section > a {
     color: inherit;
     text-decoration: inherit;
