--- a/pages-sections/Footer/Footer.module.css
+++ b/pages-sections/Footer/Footer.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: black;
+    background-color: #121121;
 
     padding-top: 20px;
     padding-bottom: 20px;
