--- a/components/Items/Item.module.css
+++ b/components/Items/Item.module.css
@@ -8,6 +8,8 @@
     grid-template-rows: min-content min-content;
     align-items: stretch;
     justify-content: stretch;
+
+    /*margin: 10px;*/
 }
 
 .item .imageContainer /* <- TODO: [🦂] CSS class imageContainer vs image-container*/ {
