--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -3,18 +3,18 @@
 
     display: grid;
 
-    grid-template-columns: 20vw 1fr 3fr 1fr 20vw;
+    grid-template-columns: 5vw auto 5vw;
     grid-template-rows: calc(30vw + 10vh) 10vh 10vh auto minmax(17vh, 75px);
 
     align-items: stretch;
     justify-content: stretch;
+
+    /* TODO: Do not show white page scrollbar */
 }
 
-/* TODO: Do not show white page scrollbar */
-
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 900px) {
     .page {
-        grid-template-columns: 5vw 1fr 3fr 1fr 5vw;
+        grid-template-columns: auto 800px auto;
     }
 }
 
@@ -25,7 +25,7 @@
 
     z-index: 1;
 
-    grid-column: 1 / span 5;
+    grid-column: 1 / span 3;
     grid-row: 1 / span 2;
 }
 
@@ -36,7 +36,7 @@
 
     z-index: 2;
 
-    grid-column: 1 / span 5;
+    grid-column: 1 / span 3;
     grid-row: 2 / span 3;
 }
 
@@ -47,7 +47,7 @@
 
     z-index: 3;
 
-    grid-column: 2 / span 3;
+    grid-column: 2 / span 1;
     grid-row: 2 / span 3;
     text-align: center;
     color: white;
@@ -94,6 +94,6 @@
 
     z-index: 3;
 
-    grid-column: 1 / span 5;
+    grid-column: 1 / span 3;
     grid-row: 5 / span 1;
 }
