--- a/pages-sections/Contact/Contact.module.css
+++ b/pages-sections/Contact/Contact.module.css
@@ -9,6 +9,8 @@
 
     justify-content: center;
     align-items: center;
+
+    padding-top: 30px;
 }
 
 .vcard img {
@@ -18,7 +20,7 @@
     border-radius: 100%;
 
     /*border: 5px solid #ff9912;*/
-    box-shadow: #ff981231 0px 0px 15px;
+    /*box-shadow: #ff981231 0px 0px 15px;*/
 }
 
 .vcard ul {
@@ -26,11 +28,11 @@
     color: white;
     list-style: none;
     padding-left: 0;
+
+    margin-left: 5%;
 }
 
-.vcard ul a {
-    color: white;
-    text-decoration: none;
-
-    /* TODO: !!! Make some global hover/interactivity for the a hrefs and items */
+.vcard li {
+    padding: 2px;
 }
+
