--- a/components/Acronym/Acronym.module.css
+++ b/components/Acronym/Acronym.module.css
@@ -1,26 +1,3 @@
 .acronym {
-    /*/
-    outline: 1px dotted red;
-    /**/
-
-    display: inline-flex;
-
-    align-items: start;
-    justify-content: center;
-    flex-flow: column;
-
-    height: 1em;
-
-    line-height: 1em;
-}
-
-.word {
-}
-
-.initial {
-    /* TODO: Use or remove empty css */
-}
-
-.rest {
-    opacity: 0.5;
+    font-weight: bold;
 }
