--- a/components/Items/Item.module.css
+++ b/components/Items/Item.module.css
@@ -125,13 +125,11 @@
     text-align: left;
     padding: 5px;
     font-size: 15px /* <- [🔠] Make one place for font-size */;
-
-    color: rgba(255, 255, 255, 0.8);
     transition: color 0.3s ease-in-out /* <- TODO: Unite transition effects ACRY */;
 }
 
 .item:hover .description {
-    color: white;
+    color: var(--highlighted-text-color);
 }
 
 .item .description a::before {
@@ -140,14 +138,4 @@
 
 .item .description a::after {
     content: ' ';
-}
-
-.item .description a {
-    /*/
-    outline: 1px dotted yellow;
-    /**/
-
-    display: inline-block;
-    color: #ccf;
-    text-decoration: none;
 }
