Using NextJS experimental appDir - Fixing the imports

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: PassionsConflict;
-    src: url(../public/fonts/PassionsConflict-Regular.ttf);
+    src: url(../../public/fonts/PassionsConflict-Regular.ttf);
 }
 
 @font-face {
     font-family: Oswald;
-    src: url(../public/fonts/Oswald/Oswald-VariableFont_wght.ttf);
+    src: url(../../public/fonts/Oswald/Oswald-VariableFont_wght.ttf);
 }
 
 html {
