--- a/src/components/ImagineTag/ImagineTag.module.css
+++ b/src/components/ImagineTag/ImagineTag.module.css
@@ -1,5 +1,7 @@
 .imagineTag::before {
     content: '/imagine';
+    color: rgb(69, 214, 250) /* <- [🎨] */;
+    margin-right: 0.3em;
 }
 
 .imagineTag {
