--- a/src/pages-sections/Footer/Footer.module.css
+++ b/src/pages-sections/Footer/Footer.module.css
@@ -15,6 +15,13 @@
     padding-bottom: 20px;
 }
 
+.footer ul li:not(:first-child):before {
+    content: '|';
+    color: rgb(17, 96, 117) /* <- [🎨] */;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 .footer ul {
     /*/
     outline: 1px dotted red; /**/
@@ -31,5 +38,6 @@
     outline: 1px dotted red; /**/
 
     list-style: none;
-    margin: 0 10px;
+    margin: 0;
+    padding: 0;
 }
