--- a/src/sections/Footer/Footer.module.css
+++ b/src/sections/Footer/Footer.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #121121;
+    background-color: hsl(222.2, 60%, 7%) /* <- [🎨] */;
 
     padding-top: 20px;
     padding-bottom: 20px;
