--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -4,6 +4,7 @@
 
     --main-background: linear-gradient(to bottom, hsla(222.2, 60%, 8.8%, 0.5), hsla(223, 43%, 19%, 0.5)),
         url(../../public/patterns/simple/grey.png);
-    /* --main-background: linear-gradient(to bottom, hsl(222.2, 60%, 8.8%), hsl(223, 43%, 19%)); */
-    --footer-background: hsl(222.2, 60%, 8.8%);
+
+    --footer-background: linear-gradient(to bottom, hsla(222.2, 60%, 8.8%, 0.5), hsla(0, 0%, 0%, 0.5)),
+        url(../../public/patterns/simple/grey.png);
 }
