Page content with references

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -3,7 +3,7 @@
     outline: 1px dotted green;
     /**/
 
-    margin-top: 50px;
+    margin-top: 80px;
 }
 
 /*
@@ -42,5 +42,5 @@
     /**/
 
     display: inline-block;
-    /* border-top: 5px solid #ff9912; */
+    /* border-top: 5px solid #dec36f; */
 }
