--- a/src/components/Items/Item.module.css
+++ b/src/components/Items/Item.module.css
@@ -5,7 +5,7 @@
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: min-content min-content;
+    grid-template-rows: min-content min-content min-content;
     align-items: stretch;
     justify-content: stretch;
 
@@ -43,6 +43,34 @@
     /* transition: all 2s ease-in-out /* <- TODO: Unite transition effects ACRY */
 }
 
+.item .personImageContainer {
+    /*/
+    outline: 1px dotted red;
+    /**/
+
+    z-index: 1;
+    order: 1;
+
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+
+    aspect-ratio: 1 / 1;
+}
+
+.item .personImageContainer img {
+    /*/
+    outline: 1px dotted red;
+    /**/
+
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+
+    padding: 10px;
+
+    object-fit: cover;
+}
+
 /*
 .item:hover .imageContainer div[style*='background-image'] {
     background-size: 200% 200%;
@@ -69,6 +97,19 @@
     outline: 1px dotted blue;
     /**/
 
+    z-index: 1;
+    order: 1;
+
+    grid-column: 1 / span 1;
+
+    font-size: 30px /* <- [🔠] Make one place for font-size */;
+}
+
+.item .floatingTitle {
+    /*/
+    outline: 1px dotted blue;
+    /**/
+
     z-index: 3;
     order: 3;
 
@@ -82,7 +123,7 @@
     pointer-events: none;
 }
 
-.item .title .inner {
+.item .floatingTitle .inner {
     /*/
     outline: 1px dotted blue;
     /**/
@@ -105,7 +146,7 @@
 }
 */
 
-.item:hover .title .inner {
+.item:hover .floatingTitle .inner {
     background-color: rgba(0, 0, 0, 0);
     opacity: 0;
     transform: scale(120%);
@@ -120,13 +161,20 @@
     order: 3;
 
     grid-column: 1 / span 1;
-    grid-row: 2 / span 1;
 
     text-align: left;
     padding: 5px;
 
     font-size: 15px /* <- [🔠] Make one place for font-size */;
     transition: color 0.3s ease-in-out /* <- TODO: Unite transition effects ACRY */;
+}
+
+.item .description p:not(:last-child) {
+    /*/
+    outline: 1px dotted yellow;
+    /**/
+
+    margin-bottom: 10px;
 }
 
 .item:hover .description {
