Item Images should be bit smaller and better fit

--- a/src/components/Items/Item.module.css
+++ b/src/components/Items/Item.module.css
@@ -103,6 +103,7 @@
     grid-column: 1 / span 1;
 
     font-size: 30px /* <- [🔠] Make one place for font-size */;
+    margin-top: -7px;
 }
 
 .item .floatingTitle {
