--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: PassionsConflict;
+    font-family: PassionsConflict /* <- [🔠] Make one place for font-family */;
     src: url(../../public/fonts/PassionsConflict-Regular.ttf);
 }
 
 @font-face {
-    font-family: Oswald;
+    font-family: Oswald /* <- [🔠] Make one place for font-family */;
     src: url(../../public/fonts/Oswald/Oswald-VariableFont_wght.ttf);
 }
 
@@ -18,7 +18,8 @@ html {
 
 body {
     background-color: #121121 /* <- TODO: Color to config */;
-    font-family: 'Oswald', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Oswald', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial,
+        sans-serif /* <- [🔠] Make one place for font-family */;
 }
 
 /* TODO: [🎨] ACRY all colors in one place HERE */
