--- a/src/components/LanguagePicker/LanguagePicker.module.css
+++ b/src/components/LanguagePicker/LanguagePicker.module.css
@@ -17,6 +17,8 @@
 }
 
 @media only screen and (max-width: 600px) {
+    /* TODO: !!! Better mobile locale switch */
+
     .LanguagePicker {
         right: -5px;
         top: -5px;
